--- a/index.html
+++ b/index.html
@@ -852,7 +852,7 @@ github.com style (c) Vasily Polovnyov <vast@whiteants.net>
 
 <p>2.1 用户可以在移动智能手机（下统称：手机），电脑(暂时只支持Mac)上安装、使用、显示、运行本软件,目前只支持1个账号登录一个设备。</p>
 
-<p>2.2 本服务的内容：本服务内容是指极速迅鸟加速器向用户提供的网络访问加速等功能服务（以下简称“本服务”）。 本加速器在中国大陆境内，仅支持中国大陆境内能访问的境外网络加速，如App,coach.commacys.comflyff.com,costco.com等各类网站和APP.</p>
+<p>2.2 本服务的内容：本服务内容是指极速迅鸟加速器向用户提供的网络访问加速等功能服务（以下简称“本服务”）。 本加速器在中国大陆境内，仅支持中国大陆境内能访问的境外网络加速。</p>
 
 <p>2.3 保留权利：未明示授权的其他一切权利仍归公司所有， 用户使用其他权利时须另外取得本公司的书面同意。</p>
 
@@ -876,7 +876,7 @@ github.com style (c) Vasily Polovnyov <vast@whiteants.net>
 
 <p>（7）利用本软件进行任何危害计算机网络安全的行为，包括但不限于：使用未经许可的数据或进入未经许可的服务器/账户；未经允许进入公众计算机网络或者他人计算机系统并删除、修改、增加存储信息；未经许可，企图探查、扫描、测试本软件系统或网络的弱点或其它实施破坏网络安全的行为； 企图干涉、破坏本软件系统或网站的正常运行，故意传播恶意程序或病毒以及其他破坏干扰正常网络信息服务的行为；伪造TCP/IP数据包名称或部分名称。</p>
 
-<p>3.2 使用本软件必须遵守国家有关法律和政策等，维护国家利益，保护国家安全，并遵守本协议，对于用户违法或违反本协议的使用而引起的一切责任，由用户负全部责任，一概与杭州飞回及合作单位无关，导致本公司及合作单位损失的，本公司及合作单位有权要求用户赔偿，并有权立即停止向其提供服务，保留相关记录，保留配合司法机关追究法律责任的权利。</p>
+<p>3.2 使用本软件必须遵守国家有关法律和政策等，维护国家利益，保护国家安全，并遵守本协议，对于用户违法或违反本协议的使用而引起的一切责任，由用户负全部责任，一概与本公司及合作单位无关，导致本公司及合作单位损失的，本公司及合作单位有权要求用户赔偿，并有权立即停止向其提供服务，保留相关记录，保留配合司法机关追究法律责任的权利。</p>
 
 <p>3.3 本软件无法绕过国家网络防火墙的网络限制(如不能访问Google、脸书、推特等被防火墙禁止的网站)，用户同意协议即表示已经接受这个前提。会员服务一经开通后不可转让或退款（因产品功能问题如客户端异常、加速不成功等原因除外）。</p>
 
@@ -916,7 +916,7 @@ github.com style (c) Vasily Polovnyov <vast@whiteants.net>
 
 <p>（4） 因用户使用本软件特定功能或因用户要求我们或合作单位提供特定服务而不可避免应向相关方提供用户信息时，我们或合作单位则需要把用户的信息提供给与此相关联的第三方。</p>
 
-<p>（5) 账户删除，若您想删除您的账户，请联系我们<a href="mailto:laowangsupport@hzfeihui.cn">laowangsupport@hzfeihui.cn</a></p>
+<p>（5) 账户删除，若您想删除您的账户，请联系我们<a href="mailto:kaifazhe315@126.com">kaifazhe315@126.com</a></p>
 
 <p>6.2 用户同意的方式有：</p>
 
